modified:   .idea/gradle.xml 	new file:   JSON2/.gitignore 	new file:   JSON2/.idea/.gitignore 	new file:   JSON2/.idea/compiler.xml 	new file:   JSON2/.idea/gradle.xml 	new file:   JSON2/.idea/misc.xml 	new file:   JSON2/.idea/vcs.xml 	new file:   JSON2/app/.gitignore 	new file:   JSON2/app/build.gradle 	new file:   JSON2/app/proguard-rules.pro 	new file:   JSON2/app/src/androidTest/java/com/example/json2/ExampleInstrumentedTest.java 	new file:   JSON2/app/src/main/AndroidManifest.xml 	new file:   JSON2/app/src/main/java/com/example/json2/MainActivity.java 	new file:   JSON2/app/src/main/res/drawable-v24/ic_launcher_foreground.xml 	new file:   JSON2/app/src/main/res/drawable/ic_launcher_background.xml 	new file:   JSON2/app/src/main/res/layout/activity_main.xml 	new file:   JSON2/app/src/main/res/mipmap-anydpi-v26/ic_launcher.xml 	new file:   JSON2/app/src/main/res/mipmap-anydpi-v26/ic_launcher_round.xml 	new file:   JSON2/app/src/main/res/mipmap-hdpi/ic_launcher.webp 	new file:   JSON2/app/src/main/res/mipmap-hdpi/ic_launcher_round.webp 	new file:   JSON2/app/src/main/res/mipmap-mdpi/ic_launcher.webp 	new file:   JSON2/app/src/main/res/mipmap-mdpi/ic_launcher_round.webp 	new file:   JSON2/app/src/main/res/mipmap-xhdpi/ic_launcher.webp 	new file:   JSON2/app/src/main/res/mipmap-xhdpi/ic_launcher_round.webp 	new file:   JSON2/app/src/main/res/mipmap-xxhdpi/ic_launcher.webp 	new file:   JSON2/app/src/main/res/mipmap-xxhdpi/ic_launcher_round.webp 	new file:   JSON2/app/src/main/res/mipmap-xxxhdpi/ic_launcher.webp 	new file:   JSON2/app/src/main/res/mipmap-xxxhdpi/ic_launcher_round.webp 	new file:   JSON2/app/src/main/res/values-night/themes.xml 	new file:   JSON2/app/src/main/res/values/colors.xml 	new file:   JSON2/app/src/main/res/values/strings.xml 	new file:   JSON2/app/src/main/res/values/themes.xml 	new file:   JSON2/app/src/main/res/xml/backup_rules.xml 	new file:   JSON2/app/src/main/res/xml/data_extraction_rules.xml 	new file:   JSON2/app/src/test/java/com/ex

--- a/calculator/app/src/main/res/layout/activity_main.xml
+++ b/calculator/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@ android:layout_height="match_parent"
 tools:context=".MainActivity">
 
 <EditText
-    android:id="@+id/et1"
+    android:id="@+id/operand1EditText"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:ems="10"
@@ -15,10 +15,10 @@ tools:context=".MainActivity">
     android:text=""
     tools:layout_editor_absoluteX="103dp"
     tools:layout_editor_absoluteY="46dp"
-    tools:ignore="DuplicateIds" />
+    tools:ignore="DuplicateIds,MissingConstraints" />
 
 <EditText
-    android:id="@+id/et2"
+    android:id="@+id/operand2EditText"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:ems="10"
